--- a/src/assets/styles/stylesheets/layout.scss
+++ b/src/assets/styles/stylesheets/layout.scss
@@ -37,3 +37,10 @@
   z-index: 0;
   height: 20rem;
 }
+
+.mobile-book-image {
+  // object-position: -8% 0;
+  // height: 75vh;
+  // object-fit: none;
+  transform: translateY(-7.5%);
+}
